# laser_cam_calib

./: README.md  README.md~
results/: Calib_Results.mat  laser_cam_calib_calib_2.m
sample data/caliblidar/0509/: HDL64_001.pcd  HDL64_002.pcd  HDL64_003.pcd  HDL64_004.pcd  HDL64_005.pcd  HDL64_006.pcd  HDL64_007.pcd  HDL64_008.pcd  HDL64_009.pcd  HDL64_010.pcd  HDL64_011.pcd  HDL64_012.pcd  HDL64_013.pcd  HDL64_014.pcd  HDL64_015.pcd  HDL64_016.pcd  HDL64_017.pcd  HDL64_018.pcd  HDL64_019.pcd  HDL64_020.pcd  HDL64_021.pcd  HDL64_022.pcd  HDL64_026.pcd  HDL64_027.pcd  HDL64_028.pcd
sample data/validate/: HDL64_001.pcd  HDL64_002.pcd
tools/: filter_xyz.py  filter_xyz.py~  plotxyz.m
tools/lcct/src/: lasercamcalib.m  proj_pc_to_image.m
tools/pcd2xyz/: CMakeLists.txt  pcd2xyz.cpp  r.cpp~
tools/toolbox_calib/: Calib_Results.m  Calib_Results.mat  Calib_Results_old0.m  Calib_Results_old0.mat  Calib_Results_old1.m  calib_data.mat
